# ai-solutions-python-sdk

./: .pre-commit-config.yaml  prefect_test.py  pyproject.toml  setup.cfg  subflow-test.py  test.json  test.py  tmp.py
ov_hcloud_ai_solution_client/: __init__.py
ov_hcloud_ai_solution_client/api/app/: app_cli_command.py  app_edit.py  app_edit_label.py  app_log.py  app_start.py  app_stop.py  app_update.py  app_update_image.py  delete_v1_app_id.py  get_v1_app.py  get_v1_app_id.py  post_v1_app.py  post_v1_app_app_id_datasync.py
ov_hcloud_ai_solution_client/api/capabilities/: get_v1_capabilities_app_image.py  get_v1_capabilities_flavor.py  get_v1_capabilities_flavor_id.py  get_v1_capabilities_job_image.py  get_v1_capabilities_notebook_editor.py  get_v1_capabilities_preset.py  (+5 more)
ov_hcloud_ai_solution_client/models/: __init__.py  app.py  app_deployment_strategy.py  app_image.py  app_list.py  app_spec.py  app_spec_labels.py  app_state_history.py  app_status.py  app_update.py  app_update_image.py  app_update_request.py  automatic_scaling_strategy.py  capability_notebook_editor.py  capability_notebook_framework.py  cli_command.py  contract.py  contract_terms_of_service.py  create_framework.py  create_image.py  create_image_version.py  credentials.py  data_store.py  data_store_volume_source.py  data_sync.py  data_sync_progress.py  data_sync_spec.py  data_sync_status.py  doc_url.py  env.py  error.py  fixed_scaling_strategy.py  flavor.py  framework.py  framework_list.py  get_v1_data_auth_alias_response_200.py  git_credentials.py  gpu_information.py  https_basic_auth.py  image.py  (+65 more)
(+58 files in other folders)
